Style wall on mobile and fix navbar

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,3 @@
 .App {
-    padding-top: 3.125rem;
+    padding-top: var(--Navbar-height);
 }
