--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,4 +1,5 @@
 .Navbar {
+    z-index: 1;
     position: fixed;
     top: 0;
     display: flex;
